@@ -1,5 +1,7 @@
 package com.marginallyclever.ro3.apps.nodedetailview;
 
+import com.marginallyclever.ro3.RO3;
+import com.marginallyclever.ro3.RO3Frame;
 import com.marginallyclever.ro3.Registry;
 import com.marginallyclever.ro3.SceneChangeListener;
 import com.marginallyclever.ro3.apps.App;
@@ -21,11 +23,23 @@ import java.util.Objects;
  */
 public class NodeDetailView extends App implements ItemAddedListener<Node>, ItemRemovedListener<Node>, SceneChangeListener {
     private static final Logger logger = LoggerFactory.getLogger(NodeDetailView.class);
-    public static final String DOC_URL = "https://marginallyclever.github.io/Robot-Overlord-App/com.marginallyclever.robotoverlord/";
+    public static final String DOC_ROOT_URL = "https://marginallyclever.github.io/Robot-Overlord-App/";
+    public static String VERSION_NAME = NodeDetailView.class.getPackage().getImplementationVersion();
+    public static String DOC_URL = DOC_ROOT_URL + VERSION_NAME;
     private final JScrollPane scroll = new JScrollPane();
     private final JToggleButton pinButton = new JToggleButton();
     private final JButton docButton = new JButton();
     private final ImageIcon bookIcon;
+
+    static {
+        String v = NodeDetailView.class.getPackage().getImplementationVersion();
+        if(v==null) {
+            // if the version is not set, use the value in the pom file.
+            v = RO3Frame.VERSION;
+        }
+        VERSION_NAME = v;
+        DOC_URL = DOC_ROOT_URL + VERSION_NAME;
+    }
 
     public NodeDetailView() {
         super(new BorderLayout());
@@ -89,8 +103,12 @@ public class NodeDetailView extends App implements ItemAddedListener<Node>, Item
 
         if(nodeList.size()==1) {
             // add a documentation button that links to
-            var clazz = nodeList.get(0).getClass();
-            String url = DOC_URL + clazz.getName().replace('.', '/') + ".html";
+            var clazz = nodeList.getFirst().getClass();
+            String moduleName = clazz.getModule().getName();
+            String className = clazz.getName();
+            String url = DOC_URL + (DOC_URL.endsWith("/")?"":"/")
+                    + moduleName + "/"
+                    + className.replace('.', '/') + ".html";
             var docAction = new BrowseURLAction(url);
             docAction.putValue(Action.NAME, "Docs");
             docAction.putValue(Action.SMALL_ICON, bookIcon);
